--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@ import Image from "astro/components/Image.astro";
 import logo from "../assets/images/logo/LogoBlack.png";
 ---
 
-<nav class="w-full p-4 fixed flex justify-center">
+<nav class="w-full p-4 fixed flex justify-center z-10">
     <div class="w-[750px] max-w-full border border-slate-300 rounded-full px-6 py-4 flex justify-center">
         <Image class="h-12 w-auto" src={logo} alt="Lambda UC Davis"/>
     </div>
@@ -13,11 +13,9 @@ import logo from "../assets/images/logo/LogoBlack.png";
 <style>
     nav div {
         @apply backdrop-blur-md;
-
         background: rgb(153, 153, 153);
-        background: -moz-linear-gradient(315deg, rgba(153, 153, 153, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
-        background: -webkit-linear-gradient(315deg, rgba(153, 153, 153, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
-        background: linear-gradient(315deg, rgba(153, 153, 153, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#999999",endColorstr="#ffffff",GradientType=1);
+        background: -moz-linear-gradient(315deg, rgba(228, 227, 227, 0.5) 0%, rgba(255, 255, 255, 0.75) 100%);
+        background: -webkit-linear-gradient(315deg, rgba(228, 227, 227, 0.5) 0%, rgba(255, 255, 255, 0.75) 100%);
+        background: linear-gradient(315deg, rgba(228, 227, 227, 0.5) 0%, rgba(255, 255, 255, 0.75) 100%);
     }
 </style>
