--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -21,6 +22,7 @@ const { title } = Astro.props;
 	<body>
 		<Navigation/>
 		<slot />
+		<Footer/>
 	</body>
 </html>
 <style is:global>
@@ -79,6 +81,13 @@ const { title } = Astro.props;
 	}
 
 	p {
-		@apply text-lg;
+		@apply text-lg leading-[1.5rem];
+	}
+
+	/* GRIDS */
+	.card-grid {
+		display: grid;
+		gap: 1rem;
+		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	}
 </style>
